fixed input font color in dark mode

--- a/assets/styles/dark/_preset.scss
+++ b/assets/styles/dark/_preset.scss
@@ -12,7 +12,7 @@ body[theme=dark] {
         background-image: linear-gradient(to left, #6a1145, #41306a, #004270, #004b5c, #004d40);
     }
     .background {
-        background: url('../../../public/images/background/darkDesktop.webp') no-repeat center;
+        background: url('../../../public/images/background/darkDesktop.webp') fixed no-repeat center;
         background-size: cover;
         opacity: .15;
     }
