--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -45,7 +45,7 @@ body[theme=light], body {
     }
     .background {
         position: absolute;
-        background: url('../../../public/images/background/desktop.webp') no-repeat center;
+        background: url('../../../public/images/background/desktop.webp') fixed no-repeat center;
         background-size: cover;
         width: 100%;
         height: 110vh;
